Summary of important user-visible changes for bim 1.1.0:
-------------------------------------------------------------------

 ** Added new functions implementing the Orthogonal Subdomain Collocation 
    method in 3D.

 ** More functions for 3d problems were added.

 ** Demostrations of how to use the package are now in the wiki.



