@@ -1,3 +1,8 @@
+Summary of important user-visible changes for bim 1.1.1:
+-------------------------------------------------------------------
+
+ ** Added new functions to perform interpolation at arbitrary nodes.
+
 Summary of important user-visible changes for bim 1.1.0:
 -------------------------------------------------------------------
 
